Data Transfer modifier not working with Vertex Groups in 4.1 Alpha #117520

Closed
opened 2024-01-25 20:16:44 +01:00 by Chris Plush · 4 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-23 20:10, hash: 99f9084bee58
Worked: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08

Caused by 91b4f9f1f6

Short description of error
When transferring normals using the Data Transfer modifier in 4.1 Alpha, the result is broken when using vertex groups where vertices are assigned with weights between 0 and 1, like 0.5.

Exact steps for others to reproduce the error
Here is a video showing the steps to reproduce in 4.1 Alpha where it's broken, and 4.0.1 where it works -

Steps to reproduce in 4.1 Alpha:

  1. Open the starting blend file > data_transfer_START.blend
  2. Go into Edit Mode of the Cylinder object.
  3. Select just the bottom edge loop (already selected in blend file).
  4. Add a new vertex group, assign the selected vertices to this group with a weight of 1.
  5. Select just the next edge loop above the current one, and assign these vertices to the same vertex group with a weight of 0.5.
  6. Add a Data Transfer Modifier.
  7. In this modifier, select the Plane as the "Source" object.
  8. Load the vertex group into the "Vertex Group" field.
  9. Enable the "Face Corner Data" option.
  10. Expand the "Face Corner Data" panel and enable "Custom Normals".

The results should look like the Cylinder smoothly and seamlessly transitions into the Plane as if they're connected, but instead the resulting normals are faceted and seem flipped:

4.1_Alpha_broken.jpg

The above steps work perfectly in 4.0.1 and lesser versions, with the addition of needing to enable Auto Smooth for the Cylinder for the Data Transfer modifier to work, and increasing the Auto Smooth angle to around 65 degrees. The results are as expected:

4.0.1_working.jpg

The problem seems to occur in 4.1 Alpha only when vertices are added to the vertex group with a weight between 0 and 1. And this appears to only be a problem when normals are involved. I've tested vertex groups and different weights with other modifiers, such as the Shrinkwrap modifier for example, and the results are identical to results in 4.0.1. So maybe there's an issue with how custom normals are being handled in the latest version?

Thanks for the help!

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-23 20:10, hash: `99f9084bee58` Worked: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08` Caused by 91b4f9f1f609e1cd119dc41943cfb2c2276092ac **Short description of error** When transferring normals using the Data Transfer modifier in 4.1 Alpha, the result is broken when using vertex groups where vertices are assigned with weights between 0 and 1, like 0.5. **Exact steps for others to reproduce the error** Here is a video showing the steps to reproduce in 4.1 Alpha where it's broken, and 4.0.1 where it works - <video src="https://cgmasters.com/data_transfer_steps.mp4" controls></video> Steps to reproduce in 4.1 Alpha: 1. Open the starting blend file > [data_transfer_START.blend](/attachments/5b23f938-2228-438f-9f96-4485daa32fd9) 2. Go into Edit Mode of the Cylinder object. 3. Select just the bottom edge loop (already selected in blend file). 4. Add a new vertex group, assign the selected vertices to this group with a weight of 1. 5. Select just the next edge loop above the current one, and assign these vertices to the same vertex group with a weight of 0.5. 6. Add a Data Transfer Modifier. 7. In this modifier, select the Plane as the "Source" object. 8. Load the vertex group into the "Vertex Group" field. 9. Enable the "Face Corner Data" option. 10. Expand the "Face Corner Data" panel and enable "Custom Normals". The results should look like the Cylinder smoothly and seamlessly transitions into the Plane as if they're connected, but instead the resulting normals are faceted and seem flipped: ![4.1_Alpha_broken.jpg](/attachments/825b4d1b-38e2-4e0a-8829-5fb47c198d61) The above steps work perfectly in 4.0.1 and lesser versions, with the addition of needing to enable Auto Smooth for the Cylinder for the Data Transfer modifier to work, and increasing the Auto Smooth angle to around 65 degrees. The results are as expected: ![4.0.1_working.jpg](/attachments/c22511a1-c6a8-4c48-b397-a6918bc5cc01) The problem seems to occur in 4.1 Alpha only when vertices are added to the vertex group with a weight between 0 and 1. And this appears to only be a problem when normals are involved. I've tested vertex groups and different weights with other modifiers, such as the Shrinkwrap modifier for example, and the results are identical to results in 4.0.1. So maybe there's an issue with how custom normals are being handled in the latest version? Thanks for the help!
Chris Plush added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-01-25 20:16:44 +01:00

It seems related to the changes in the Normals and AutoSmooth code.
@HooglyBoogly, does this issue ring a bell?

It seems related to the changes in the Normals and AutoSmooth code. @HooglyBoogly, does this issue ring a bell?
Member

Caused by 91b4f9f1f6

Problem is that the resulting mix factor is the product of the mix factor in the UI and the weights, so just doing the check as in the culprit commit is not enough.
Think I can fix, will put on my desk.

Caused by 91b4f9f1f609e1cd119dc41943cfb2c2276092ac Problem is that the resulting mix factor is the product of the mix factor in the UI and the weights, so just doing the check as in the culprit commit is not enough. Think I can fix, will put on my desk.
Philipp Oeser self-assigned this 2024-01-26 11:09:23 +01:00
Member

Workaround for now btw.: just set the Mix Factor to .9999

Workaround for now btw.: just set the `Mix Factor` to .9999
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-26 16:46:24 +01:00
Author

Thank you!

Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117520
No description provided.